force-app/main/default/objects/Access_charges__c/Access_charges__c.object-meta.xml
<CustomObject>
    <label>Access charges</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>