force-app/main/default/objects/Access_charges__c/fields/Access_Charge_Name__c.field-meta.xml
<CustomField>
    <fullName>Access_Charge_Name__c</fullName>
    <label>Details of equipment/facility</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>