force-app/main/default/objects/Access_charges__c/fields/Access_Charges_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Access_Charges_Per_Unit__c</fullName>
    <label>Access Charges Per Unit</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>