force-app/main/default/objects/Access_charges__c/fields/Budget__c.field-meta.xml
<CustomField>
    <fullName>Budget__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget</label>
    <referenceTo>Budget__c</referenceTo>
    <relationshipLabel>Access charges</relationshipLabel>
    <relationshipName>Access_charges</relationshipName>
    <type>Lookup</type>
</CustomField>