force-app/main/default/objects/Access_charges__c/fields/Specify_access__c.field-meta.xml
<CustomField>
    <fullName>Specify_access__c</fullName>
    <inlineHelpText>units can be either defined as per day or 
per hour</inlineHelpText>
    <label>Specify access</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Per Hours</fullName>
            </value>
            <value>
                <fullName>Per Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>