force-app/main/default/objects/Access_charges__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>IF(  NOT(AND(ISBLANK( Access_Charges_Per_Unit__c ), ISBLANK( Number_of_Units__c )) ) , Access_Charges_Per_Unit__c * Number_of_Units__c , 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>